fixed title spacing

--- a/web/sass/style.scss
+++ b/web/sass/style.scss
@@ -168,7 +168,7 @@ header {
 #title {
     --height: calc(3vw + 32px);
     display: flex;
-    height: var(--height);
+    height: calc(var(--height) * 0.8);
     overflow: hidden;
     position: relative;
     align-self: center;
@@ -176,7 +176,7 @@ header {
     > div {
         display: flex;
         flex-direction: column;
-        height: inherit;
+        height: fit-content;
         font-size: calc(var(--height) / 4);
         transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
         transition-duration: 1s;
@@ -194,7 +194,7 @@ header {
         padding: 10px 0;
         box-sizing: border-box;
         display: table;
-        height: inherit;
+        height: var(--height);
         color: $color-main;
     }
 }
